[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/bg/main.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/main_menu.gd" type="Script" id=2]
[ext_resource path="res://textures/ui/button.png" type="Texture" id=3]
[ext_resource path="res://fonts/50-font.tres" type="DynamicFont" id=4]
[ext_resource path="res://backgroundmusic/MainSound.ogg" type="AudioStream" id=5]

[node name="bg" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1199.0
margin_top = 159.0
margin_right = -11.0
script = ExtResource( 2 )

[node name="buttons" type="VBoxContainer" parent="menu"]
margin_left = 155.0
margin_top = 210.0
margin_right = 555.0
margin_bottom = 710.0
rect_min_size = Vector2( 400, 500 )
custom_constants/separation = 80

[node name="newGameBut" type="TextureButton" parent="menu/buttons"]
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="menu/buttons/newGameBut"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Новая игра"
align = 1
valign = 1

[node name="continueBut" type="TextureButton" parent="menu/buttons"]
margin_top = 180.0
margin_right = 400.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 100 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Label2" type="Label" parent="menu/buttons/continueBut"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Продолжить"
align = 1
valign = 1

[node name="quitBut" type="TextureButton" parent="menu/buttons"]
margin_top = 360.0
margin_right = 400.0
margin_bottom = 460.0
rect_min_size = Vector2( 0, 100 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Label3" type="Label" parent="menu/buttons/quitBut"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Выйти"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

